# PAOO_T1

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/StudentManager/: CMakeLists.txt  hardWorkingStudent.hpp  studentManager.cpp  studentManager.hpp  workingStudent.cpp  workingStudent.hpp
src/StudentManager/StudentClass/: CMakeLists.txt  studentClass.cpp  studentClass.hpp
